Add quote for each transaction
